--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <link rel="icon" type="image/x-icon" href="%PUBLIC_URL%/favicon.ico" />
         <link id="theme-link" rel="stylesheet" href="%PUBLIC_URL%/assets/themes/lara-light-indigo/theme.css">
+        <link rel="stylesheet" href="../src/assets/demo/flags/flags.css">
     </head>
 
     <body>
